[gd_scene load_steps=60 format=3 uid="uid://6ig3u12x0tth"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_dpf8g"]
[ext_resource type="Texture2D" uid="uid://wn0vk6jkt7wq" path="res://art/player/walk/walk_01.png" id="1_uw2cv"]
[ext_resource type="Texture2D" uid="uid://b0dwkludi1gwe" path="res://art/player/eletric_fall/fall_01.png" id="2_2i7g6"]
[ext_resource type="Texture2D" uid="uid://dju8st57pxeoc" path="res://art/player/walk/walk_02.png" id="2_5mpjp"]
[ext_resource type="Texture2D" uid="uid://bch7qwj5dnq8j" path="res://art/player/eletric_fix/eletric_fixing_01.png" id="3_2q2ld"]
[ext_resource type="Texture2D" uid="uid://cjtayt8fdvnno" path="res://art/player/walk/walk_03.png" id="3_744v7"]
[ext_resource type="Texture2D" uid="uid://bap31vv00sk6w" path="res://art/player/walk/walk_04.png" id="4_r8oa2"]
[ext_resource type="Texture2D" uid="uid://d01qqbqd4fyv8" path="res://art/player/eletric_fix/eletric_fixing_02.png" id="4_ri3ma"]
[ext_resource type="Texture2D" uid="uid://bfrvax13weju0" path="res://art/player/eletric_fix/eletric_fixing_03.png" id="5_fdqj6"]
[ext_resource type="Texture2D" uid="uid://c80iau6qdq51s" path="res://art/player/walk/walk_05.png" id="5_h6e7i"]
[ext_resource type="Texture2D" uid="uid://blmsilomqverx" path="res://art/player/walk/walk_06.png" id="6_odsst"]
[ext_resource type="Texture2D" uid="uid://gvyigfhjsmvf" path="res://art/player/eletric_fix/eletric_fixing_04.png" id="6_osfsj"]
[ext_resource type="Texture2D" uid="uid://dd7ts4ghqpj3a" path="res://art/player/eletric_fix/eletric_fixing_05.png" id="7_4frlj"]
[ext_resource type="Texture2D" uid="uid://b1xiwrotwy6qc" path="res://art/player/walk/walk_07.png" id="7_e5bmu"]
[ext_resource type="Texture2D" uid="uid://b503c4bfu8fq1" path="res://art/player/walk/walk_08.png" id="8_6rru6"]
[ext_resource type="Texture2D" uid="uid://bqrql16t46alo" path="res://art/player/eletric_fix/eletric_fixing_06.png" id="8_ijxee"]
[ext_resource type="Texture2D" uid="uid://dexrtkte57hax" path="res://art/player/eletric_fix/eletric_fixing_07.png" id="9_1h210"]
[ext_resource type="Texture2D" uid="uid://c8v70m102wde3" path="res://art/player/fall/fall_01.png" id="10_0d5sp"]
[ext_resource type="Texture2D" uid="uid://djm7hd7tuqt8n" path="res://art/player/eletric_fix/eletric_fixing_08.png" id="10_odgyv"]
[ext_resource type="Texture2D" uid="uid://cits67n20ggms" path="res://art/player/eletric_idle/eletric_idle_01.png" id="11_1r2if"]
[ext_resource type="Texture2D" uid="uid://cthxcxdjkydt1" path="res://art/player/eletric_walk/eletric_walk_01.png" id="11_72avc"]
[ext_resource type="Texture2D" uid="uid://b7h6kyp7ua0lg" path="res://art/player/eletric_idle/eletric_idle_02.png" id="12_o3jyd"]
[ext_resource type="Texture2D" uid="uid://ifqi3vgh08ur" path="res://art/player/eletric_walk/eletric_walk_02.png" id="12_o68yb"]
[ext_resource type="Texture2D" uid="uid://c05smnaswpk4b" path="res://art/player/eletric_idle/eletric_idle_03.png" id="13_2ulkk"]
[ext_resource type="Texture2D" uid="uid://dxvhpky2bf58y" path="res://art/player/eletric_walk/eletric_walk_03.png" id="13_digqd"]
[ext_resource type="Texture2D" uid="uid://dl6scvg4jbx7y" path="res://art/player/eletric_walk/eletric_walk_04.png" id="14_bruaf"]
[ext_resource type="Texture2D" uid="uid://wpjvtivosdeh" path="res://art/player/eletric_idle/eletric_idle_04.png" id="14_riocd"]
[ext_resource type="Texture2D" uid="uid://disksq1aicmw5" path="res://art/player/eletric_walk/eletric_walk_05.png" id="15_c7yll"]
[ext_resource type="Texture2D" uid="uid://bw08gr60ufkul" path="res://art/player/eletric_walk/eletric_walk_06.png" id="16_kr4ut"]
[ext_resource type="Texture2D" uid="uid://chrvq8865c02y" path="res://art/player/eletric_walk/eletric_walk_07.png" id="17_tl86o"]
[ext_resource type="Texture2D" uid="uid://mev6uqwoorl" path="res://art/player/eletric_walk/eletric_walk_08.png" id="18_cb2bn"]
[ext_resource type="Texture2D" uid="uid://dti5inmmwosd4" path="res://art/player/mechanical_fall/fall_01.png" id="20_ixtrd"]
[ext_resource type="Texture2D" uid="uid://cqpp48qk8g7hj" path="res://art/player/idle/idle_01.png" id="20_vigd3"]
[ext_resource type="Texture2D" uid="uid://ds5wp8qwl6epg" path="res://art/player/idle/idle_02.png" id="21_hhtw7"]
[ext_resource type="Texture2D" uid="uid://cirnkpvbix6gt" path="res://art/player/mechanical_idle/mechanical_idle_01.png" id="21_sbnjc"]
[ext_resource type="Texture2D" uid="uid://nwbuewf655g7" path="res://art/player/idle/idle_03.png" id="22_4tfmn"]
[ext_resource type="Texture2D" uid="uid://dgauyjeuqw7ys" path="res://art/player/mechanical_idle/mechanical_idle_02.png" id="22_wm2wn"]
[ext_resource type="Texture2D" uid="uid://b2gabi4nsf17h" path="res://art/player/mechanical_idle/mechanical_idle_03.png" id="23_ghxta"]
[ext_resource type="Texture2D" uid="uid://ccn6gkpn3dox3" path="res://art/player/idle/idle_04.png" id="23_kp00p"]
[ext_resource type="Texture2D" uid="uid://d0xmn0geg0irt" path="res://art/player/mechanical_idle/mechanical_idle_04.png" id="24_scl0c"]
[ext_resource type="Texture2D" uid="uid://b64btwf5ijy60" path="res://art/player/mechanical_walk/walk_01.png" id="25_cxrqs"]
[ext_resource type="Texture2D" uid="uid://67g3fc853k32" path="res://art/player/mechanical_walk/walk_02.png" id="26_lax6u"]
[ext_resource type="Texture2D" uid="uid://dha2lurspejm8" path="res://art/player/mechanical_walk/walk_03.png" id="27_eva38"]
[ext_resource type="Texture2D" uid="uid://cfgcduv00svov" path="res://art/player/mechanical_walk/walk_04.png" id="28_lwqkg"]
[ext_resource type="Texture2D" uid="uid://c62efm1xd7eou" path="res://art/player/mechanical_walk/walk_05.png" id="29_s81f1"]
[ext_resource type="Texture2D" uid="uid://thri5kaee7lw" path="res://art/player/mechanical_walk/walk_06.png" id="30_3xbty"]
[ext_resource type="Texture2D" uid="uid://b7xyak38p84lp" path="res://art/player/mechanical_walk/walk_07.png" id="31_0dof8"]
[ext_resource type="Texture2D" uid="uid://dp0aoxd786uvn" path="res://art/player/mechanical_walk/walk_08.png" id="32_r6ix4"]
[ext_resource type="Texture2D" path="res://art/thinking.png" id="49_m5ils"]
[ext_resource type="AudioStream" path="res://sounds/powerup-on-player.wav" id="50_hhce5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4md7n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2i7g6")
}],
"loop": true,
"name": &"eletric_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2q2ld")
}, {
"duration": 1.0,
"texture": ExtResource("4_ri3ma")
}, {
"duration": 1.0,
"texture": ExtResource("5_fdqj6")
}, {
"duration": 1.0,
"texture": ExtResource("6_osfsj")
}, {
"duration": 1.0,
"texture": ExtResource("7_4frlj")
}, {
"duration": 1.0,
"texture": ExtResource("8_ijxee")
}, {
"duration": 1.0,
"texture": ExtResource("9_1h210")
}, {
"duration": 1.0,
"texture": ExtResource("10_odgyv")
}],
"loop": true,
"name": &"eletric_fix",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_1r2if")
}, {
"duration": 1.0,
"texture": ExtResource("12_o3jyd")
}, {
"duration": 1.0,
"texture": ExtResource("13_2ulkk")
}, {
"duration": 1.0,
"texture": ExtResource("14_riocd")
}],
"loop": true,
"name": &"eletric_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_72avc")
}, {
"duration": 1.0,
"texture": ExtResource("12_o68yb")
}, {
"duration": 1.0,
"texture": ExtResource("13_digqd")
}, {
"duration": 1.0,
"texture": ExtResource("14_bruaf")
}, {
"duration": 1.0,
"texture": ExtResource("15_c7yll")
}, {
"duration": 1.0,
"texture": ExtResource("16_kr4ut")
}, {
"duration": 1.0,
"texture": ExtResource("17_tl86o")
}, {
"duration": 1.0,
"texture": ExtResource("18_cb2bn")
}],
"loop": true,
"name": &"eletric_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_0d5sp")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_vigd3")
}, {
"duration": 1.0,
"texture": ExtResource("21_hhtw7")
}, {
"duration": 1.0,
"texture": ExtResource("22_4tfmn")
}, {
"duration": 1.0,
"texture": ExtResource("23_kp00p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_ixtrd")
}],
"loop": true,
"name": &"mechanical_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_sbnjc")
}, {
"duration": 1.0,
"texture": ExtResource("22_wm2wn")
}, {
"duration": 1.0,
"texture": ExtResource("23_ghxta")
}, {
"duration": 1.0,
"texture": ExtResource("24_scl0c")
}],
"loop": true,
"name": &"mechanical_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_cxrqs")
}, {
"duration": 1.0,
"texture": ExtResource("26_lax6u")
}, {
"duration": 1.0,
"texture": ExtResource("27_eva38")
}, {
"duration": 1.0,
"texture": ExtResource("28_lwqkg")
}, {
"duration": 1.0,
"texture": ExtResource("29_s81f1")
}, {
"duration": 1.0,
"texture": ExtResource("30_3xbty")
}, {
"duration": 1.0,
"texture": ExtResource("31_0dof8")
}, {
"duration": 1.0,
"texture": ExtResource("32_r6ix4")
}],
"loop": true,
"name": &"mechanical_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uw2cv")
}, {
"duration": 1.0,
"texture": ExtResource("2_5mpjp")
}, {
"duration": 1.0,
"texture": ExtResource("3_744v7")
}, {
"duration": 1.0,
"texture": ExtResource("4_r8oa2")
}, {
"duration": 1.0,
"texture": ExtResource("5_h6e7i")
}, {
"duration": 1.0,
"texture": ExtResource("6_odsst")
}, {
"duration": 1.0,
"texture": ExtResource("7_e5bmu")
}, {
"duration": 1.0,
"texture": ExtResource("8_6rru6")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohub6"]
size = Vector2(18, 26.3069)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xr74"]
size = Vector2(18, 16.6667)

[sub_resource type="Animation" id="Animation_dbwrf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vcj7t"]
resource_name = "expand"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.203063, 3.4822),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}

[sub_resource type="Animation" id="Animation_osxmg"]
resource_name = "shrink"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.203063, 3.605),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ebsa"]
_data = {
"RESET": SubResource("Animation_dbwrf"),
"expand": SubResource("Animation_vcj7t"),
"shrink": SubResource("Animation_osxmg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bop7n"]
bg_color = Color(0, 0, 0, 0.615686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfpxp"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Engineer" type="CharacterBody2D" groups=["Player"]]
z_index = -1
collision_layer = 2
collision_mask = 5
input_pickable = true
script = ExtResource("1_dpf8g")
speed = 60

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4md7n")
animation = &"eletric_idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
scale = Vector2(1, 0.988332)
shape = SubResource("RectangleShape2D_ohub6")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, -13.6667)
shape = SubResource("RectangleShape2D_7xr74")
debug_color = Color(0.984314, 0, 0.34902, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ebsa")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -13.0
offset_top = -22.0
offset_right = 13.0
offset_bottom = -15.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_bop7n")
theme_override_styles/fill = SubResource("StyleBoxFlat_dfpxp")
max_value = 3.0
value = 1.0
show_percentage = false

[node name="Thinking" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1, -28)
texture = ExtResource("49_m5ils")

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("50_hhce5")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_power_ups_timer_timeout"]
